// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Options component Renders correctly with groups 1`] = `
<ul
  className="options"
>
  <li
    className="row"
    role="none"
  >
    <div
      className="group"
    >
      <div
        className="group-header"
      >
        Group
      </div>
      <ul
        className="options"
      >
        <li
          className="row"
          data-index={null}
          data-value="foo"
          role="menuitem"
        >
          <button
            className="option"
            disabled={false}
            onMouseDown={[Function]}
            tabIndex={1}
            value="foo"
          >
            Foo
          </button>
        </li>
        <li
          className="row"
          data-index={null}
          data-value="bar"
          role="menuitem"
        >
          <button
            className="option"
            disabled={false}
            onMouseDown={[Function]}
            tabIndex={1}
            value="bar"
          >
            Bar
          </button>
        </li>
      </ul>
    </div>
  </li>
</ul>
`;

exports[`Test Options component Renders correctly without groups 1`] = `
<ul
  className="options"
>
  <li
    className="row"
    data-index={null}
    data-value="foo"
    role="menuitem"
  >
    <button
      className="option"
      disabled={false}
      onMouseDown={[Function]}
      tabIndex={1}
      value="foo"
    >
      Foo
    </button>
  </li>
  <li
    className="row"
    data-index={null}
    data-value="bar"
    role="menuitem"
  >
    <button
      className="option"
      disabled={false}
      onMouseDown={[Function]}
      tabIndex={1}
      value="bar"
    >
      Bar
    </button>
  </li>
</ul>
`;

exports[`Test Options component Renders custom group renderer 1`] = `
<ul
  className="options"
>
  <li
    className="row"
    role="none"
  >
    <div
      className="group"
    >
      <div
        className="group-header"
      >
        Group: Group
      </div>
      <ul
        className="options"
      >
        <li
          className="row"
          data-index={null}
          data-value="foo"
          role="menuitem"
        >
          <button
            className="option"
            disabled={false}
            onMouseDown={[Function]}
            tabIndex="1"
            value="foo"
          >
            Foo
          </button>
        </li>
        <li
          className="row"
          data-index={null}
          data-value="bar"
          role="menuitem"
        >
          <button
            className="option"
            disabled={false}
            onMouseDown={[Function]}
            tabIndex="1"
            value="bar"
          >
            Bar
          </button>
        </li>
      </ul>
    </div>
  </li>
</ul>
`;
